# cad3dify

./: .env.sample  LICENSE  README.md  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
cad3dify/: __init__.py  agents.py  chains.py  chat_models.py  image.py  pipeline.py  render.py
cad3dify/v1/: cad_code_generator.py  cad_code_refiner.py
scripts/: app.py  cli.py
src/: App.css  App.tsx  index.css
src/components/: CadProcessor.tsx  StepViewer.tsx
src/lib/: supabase.ts
supabase/functions/processCadImage/: index.ts
supabase/migrations/: 20250704060037_damp_math.sql  20250704060508_ancient_grove.sql
